Kubernetes/sakila-database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: sakila-database-service
  name: sakila-database-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      service: sakila-database-service
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.network/db-network: "true"
        service: sakila-database-service
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
              valueFrom:
                secretKeyRef:
                  name: sakila-database-secret
                  key: mysql-database-name
            - name: MYSQL_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: sakila-database-secret
                  key: mysql-password
            - name: MYSQL_ROOT_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: sakila-database-secret
                  key: mysql-root-password
            - name: MYSQL_USER
              valueFrom: 
                secretKeyRef:
                  name: sakila-database-secret
                  key: mysql-user-name
          image: javidchaji/sakila_database
          name: sakila-database-container
          ports:
            - containerPort: 3306
          resources:
            requests:
              cpu: "2"
              memory: "209715200"
          tty: true
          volumeMounts:
            - mountPath: /var/lib/mysql/
              name: sakila-database-claim0
      restartPolicy: Always
      volumes:
        - name: sakila-database-claim0
          persistentVolumeClaim:
            claimName: sakila-database-claim0
status: {}

---
# sakila-database-service
apiVersion: v1
kind: Service
metadata:
  labels:
    service: sakila-database-service
  name: sakila-database-service
spec:
  ports:
    - name: "3306"
      port: 3306
      targetPort: 3306
  selector:
    service: sakila-database-service
status:
  loadBalancer: {}
