Kubernetes/sakila-manager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: sakila-manager-service
  name: sakila-manager-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      service: sakila-manager-service
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.network/db-network: "true"
        io.kompose.network/reverse-proxy-network: "true"
        service: sakila-manager-service
    spec:
      containers:
        - image: javidchaji/sakila-manager
          name: sakila-manager-container
          ports:
            - containerPort: 5000
          resources:
            limits:
              cpu: "1"
              memory: "1048576e3"
            requests:
              cpu: 250m
              memory: "524288e3"
          tty: true
          volumeMounts:
            - mountPath: /usr/src/app/Download_Folder
              name: sakila-manager-claim0
      restartPolicy: Always
      volumes:
        - name: sakila-manager-claim0
          persistentVolumeClaim:
            claimName: sakila-manager-claim0
status: {}

---
# sakila-manager-service
apiVersion: v1
kind: Service
metadata:
  labels:
    service: sakila-manager-service
  name: sakila_manager
spec:
  ports:
    - name: "5000"
      port: 5000
      targetPort: 5000
    - name: 5000-tcp
      port: 5000
      targetPort: 5000
  selector:
    service: sakila-manager-service
status:
  loadBalancer: {}
