Kubernetes/reverse-proxy-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: reverse-proxy-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/reverse-proxy-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/reverse-proxy-network: "true"
